--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -4,6 +4,13 @@
 	ViewData["Title"] = "Staff Assignment";
 }
 
+<head>
+	<!-- DataTables Select CSS -->
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.4/css/select.dataTables.min.css">
+	<!-- DataTables Select JavaScript -->
+	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/select/1.3.4/js/dataTables.select.min.js"></script>
+</head>
+
 <!-- Alert Banners -->
 @if (!string.IsNullOrEmpty(Request.Query["successMessage"]))
 {
@@ -159,11 +166,11 @@
 										<td width="10%">
 											@if (@item.status == "Assigned")
 											{
-												<span class="badge bg-success">Assigned</span>
+												<span class="badge bg-success">@item.status</span>
 											}
 											else if (@item.status == "Completed")
 											{
-												<span class="badge rounded-pill bg-light">Completed</span>
+												<span class="badge rounded-pill bg-light">@item.status</span>
 											}
 										</td>
 										<td width="5%">
@@ -262,17 +269,50 @@
 <!-- Making the table responsive -->
 <script>
 	$(document).ready(function () {
-		$('#assignment-table').DataTable({
+		var table = $('#assignment-table').DataTable({
 			responsive: true,
+			select: true, // Enable row selection
 			columnDefs: [
 				{ "orderable": true, "targets": [1, 3, 4, 5] }, // Sortable columns
 				{ "orderable": false, "targets": [0, 2, 6] } // Non-sortable columns
 			],
-			// Set initial sorting by Assigned Data
-			order: [[3, 'asc']],
+			order: [ [3, 'desc']], // Initial sorting by Assigned Date
 			language: {
 				emptyTable: "There are no staff members assigned at this evacuation center.",
 			}
+		});
+
+		// Adding filters to specific columns
+		table.columns([2, 5]).every(function () {
+			var column = this;
+			var select = $('<select><option value=""></option></select>')
+				.appendTo($(column.header()))
+				.on('change', function () {
+					var val = $.fn.dataTable.util.escapeRegex(
+						$(this).val()
+					);
+
+					column
+						.search(val ? '^' + val + '$' : '', true, false)
+						.draw();
+				});
+
+			column.data().unique().sort().each(function (d, j) {
+				// Only add the options "Assigned" and "Completed" for the "Status" column
+				if (column.index() === 5) {
+					// Set specific filter options only if they haven't been added
+					if (select.find("option[value='Assigned']").length == 0) {
+						select.append('<option value="Assigned">Assigned</option>');
+					}
+					if (select.find("option[value='Completed']").length == 0) {
+						select.append('<option value="Completed">Completed</option>');
+					}
+				} 
+				// For other columns, show all unique values as filter options
+				else {
+					select.append('<option value="' + d + '">' + d + '</option>');
+				}
+			});
 		});
 	});
 </script>
