Replaced edit and delete buttons with view button

--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -133,7 +133,7 @@
 							}
 						</td>
 						<td width="10%">
-							<a class="btn btn-success edit-button" href="/disaster/profile?centerID=@item.centerID">
+							<a class="btn btn-success edit-button" href="/disaster/profile/index?disasterID=@item.disasterID">
 								View
 							</a>
 							@*<!-- Edit button -->
