--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -45,26 +45,40 @@
 }
 
 <div class="container p-2">
+	<!-- Breadcrumb -->
+	<div class="row p-2">
+		<div style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item">
+					<a class="nav-link text-muted" asp-area="" asp-page="/Index">
+						<i class="bi bi-house-door-fill" style="padding: 5px;"></i>
+						Home
+					</a>
+				</li>
+				<li class="breadcrumb-item active" aria-current="page" style="color: #3F8F8B;">
+					<strong>Disaster</strong>
+				</li>
+			</ol>
+		</div>
+	</div>
 
-	<div class="row">
-		<ul class="breadcrumbs">
-			<li><a href="#" class="active">Disaster</a></li>
-		</ul>
-
+	<!-- Title and Add Button-->
+	<div class="row p-2">
 		<div class="col d-flex align-items-center">
-			<h1><i class="bi bi-fire"></i>Disaster</h1>
+			<h1>Disaster</h1>
 		</div>
 
 		<div class="col-auto d-flex justify-content-between align-items-center">
 			<div class="d-flex justify-content-end align-items-center">
 				<a class="btn btn-primary mb-2" href="/disaster/add">
-					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Disaster
+					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+					Add Disaster
 				</a>
 			</div>
 		</div>
 	</div>
 
-
+	<!-- Table -->
 	<div class="row p-2">
 		<div class="col-lg-12">
 			<table id="disaster-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
