--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -67,7 +67,7 @@
 			</ol>
 		</div>
 	</div>
-
+	
 	<!-- Title and Add Button-->
 	<div class="row p-2">
 		<div class="col d-flex align-items-center">
@@ -91,7 +91,7 @@
 				<thead>
 					<tr>
 						<th>#</th>
-						<th>Name</th>
+						<th>Evacuation Center</th>
 						<th>Barangay</th>
 						<th style="text-align: center;">Capacity</th>
 						<th style="text-align: center;">Status</th>
@@ -105,20 +105,20 @@
 						<tr>
 							<td width="5%">@counter</td>
 							<td width="25%">@item.centerName</td>
-							<td width="25%">@item.barangayName</td>
+							<td width="20%">@item.barangayName</td>
 							<td width="15%" style="text-align: center;">@item.maxCapacity</td>
-							<td width="10%" style="text-align: center;">
+							<td width="15%" style="text-align: center;">
 								@if (@item.status == "Active")
 								{
-									<span class="badge bg-success">Active</span>
+									<span class="badge bg-success">@item.status</span>
 								}
 								else if (@item.status == "Inactive")
 								{
-									<span class="badge rounded-pill bg-light">Inactive</span>
+									<span class="badge rounded-pill bg-light">@item.status</span>
 								}
 							</td>
 							<td width="10%">
-								<a class="btn btn-success edit-button" href="/disaster/profile?centerID=@item.centerID">
+								<a class="btn btn-success edit-button" href="/evacuationcenter/profile/index?centerID=@item.centerID">
 									View
 								</a>
 							</td>
@@ -130,56 +130,6 @@
 		</div>
 	</div>
 </div>
-
-<!-- Modal: Confirm Delete -->
-<div class="modal" id="deleteConfirmationModal" tabindex="-1">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title">Confirm Delete</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<p>Are you sure you want to delete this disaster?</p>
-				<p><strong class="text-danger">This cannot be undone.</strong></p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
-			</div>
-		</div>
-	</div>
-</div>
-
-<!-- Confirm Delete button in Modal -->
-<script>
-	const deleteButtons = document.querySelectorAll('.edit-button');
-	let centerIdToDelete = null;
-
-	deleteButtons.forEach(function (button) {
-		button.addEventListener('click', function () {
-			centerIdToDelete = this.getAttribute('data-deleteid');
-		});
-	});
-
-	// Function to prepare for delete action
-	function prepareDelete(centerID) {
-		if (centerID === null || centerID === undefined) {
-			// Retrieve centerID from the button's data-deleteid attribute
-			centerIdToDelete = event.currentTarget.getAttribute('data-deleteid');
-		} else {
-			centerIdToDelete = centerID;
-		}
-	}
-
-	const confirmDeleteButton = document.getElementById('confirmDeleteButton');
-
-	confirmDeleteButton.addEventListener('click', function () {
-		if (centerIdToDelete !== null) {
-			window.location.href = "/evacuationcenter/delete?centerID=" + centerIdToDelete;
-		}
-	});
-</script>
 
 <!-- Making the table responsive -->
 <script>
