--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -48,261 +48,98 @@
 		text-decoration: none;
 		color: inherit;
 	}
-
-	.clickable-row:hover {
-		cursor: pointer;
-	}
 </style>
 
 <div class="container p-2">
-	<div class="row pt-3">
-		<div class="col">	
-			<div style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a class="nav-link text-muted" asp-area="" asp-page="/Index"><i class="bi bi-house-door-fill" style="padding: 5px;"></i>Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page" style="color: #3F8F8B;"><strong>Evacuation Center</strong></li>
-				</ol>
-			</div>
-
-			<!-- Search Bar -->
-			<form id="search-form">
-				<div class="input-group">
-					<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search evacuation center" aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
-					<button type="submit" class="btn btn-primary" id="search-button"><i class="bi bi-search"></i></button>
-				</div>
-			</form>
+	<!-- Breadcrumb -->
+	<div class="row p-2">
+		<div style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+			<ol class="breadcrumb">
+				<li class="breadcrumb-item">
+					<a class="nav-link text-muted" asp-area="" asp-page="/Index">
+						<i class="bi bi-house-door-fill" style="padding: 5px;"></i>
+						Home
+					</a>
+				</li>
+				<li class="breadcrumb-item active" aria-current="page" style="color: #3F8F8B;">
+					<strong>Evacuation Center</strong>
+				</li>
+			</ol>
 		</div>
-
-
-	<div class="row pt-4">
-		<div class="col">
+	</div>
+	
+	<!-- Title and Add Button-->
+	<div class="row p-2">
+		<div class="col d-flex align-items-center">
 			<h1>Evacuation Center</h1>
 		</div>
 
-		<div class="col-auto">
+		<div class="col-auto d-flex justify-content-between align-items-center">
 			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2" href="/evacuationcenter/add"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Evacuation Center</a>
+				<a class="btn btn-primary mb-2" href="/evacuationcenter/add">
+					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+					Add Evacuation Center
+				</a>
 			</div>
 		</div>
 	</div>
 
-	<div class="table-responsive">
-		<table class="table align-middle table-hover" id="evacuation-table" style="width:100%">
-			<thead>
-				<tr>
-					<th>#</th>
-					<th>
-						<a asp-page="./Index" asp-route-sortBy="centerName" asp-route-sortOrder="@(Model.SortBy == "centerName" && Model.SortOrder == "asc" ? "desc" : "asc")" onclick="toggleArrowIcons('centerName')">
-							Evacuation Center Name
-							<ion-icon id="centerNameArrow" name="@(Model.SortBy == "centerName" && Model.SortOrder == "asc" ? "arrow-up-outline" : "arrow-down-outline")"></ion-icon>
-						</a>
-					</th>
-					<th>Barangay</th>
-					<th>
-						<a asp-page="./Index" asp-route-sortBy="maxCapacity" asp-route-sortOrder="@(Model.SortBy == "maxCapacity" && Model.SortOrder == "asc" ? "desc" : "asc")" onclick="toggleArrowIcons('maxCapacity')">
-							Capacity
-							<ion-icon id="maxCapacityArrow" name="@(Model.SortBy == "maxCapacity" && Model.SortOrder == "asc" ? "arrow-up-outline" : "arrow-down-outline")"></ion-icon>
-						</a>
-					</th>
-					<th>
-						<a asp-page="./Index" asp-route-sortBy="status" asp-route-sortOrder="@(Model.SortBy == "status" && Model.SortOrder == "asc" ? "desc" : "asc")" onclick="toggleArrowIcons('status')">
-							Status
-							<ion-icon id="statusArrow" name="@(Model.SortBy == "status" && Model.SortOrder == "asc" ? "arrow-up-outline" : "arrow-down-outline")"></ion-icon>
-						</a>
-					</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				@{ var counter = 1; }
-				@foreach (var item in Model.listEvacuation) {
-					<tr data-id="@item.centerID" class="data-row clickable-row">
-						<td width="5%">@counter</td>
-						<td width="25%">@item.centerName</td>
-						<td width="20%">@item.barangayName</td>
-						<td width="15%">@item.maxCapacity</td>
-						<td width="15%">
-							@if (@item.status == "Active")
-							{
-								<span class="badge bg-success">Active</span>
-							}
-							else if (@item.status == "Inactive")
-							{
-								<span class="badge rounded-pill bg-light">Inactive</span>
-							}
-						</td>
-						<td width="10%">
-							<a class="btn btn-success edit-button" href="/disaster/profile/index?disasterID=@item.disasterID">
-								View
-							</a>
-							@*<!-- Edit button -->
-							<a class="btn btn-success edit-button" href="/evacuationcenter/edit?centerID=@item.centerID">
-								<i class="bi bi-pencil-fill"></i>
-							</a>
-
-							<!-- Delete button -->
-							<a href="#" class="btn btn-danger edit-button" onclick="prepareDelete('@item.centerID')"
-							   data-deleteid="@item.centerID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-								<i class="bi bi-trash-fill"></i>
-							</a>*@
-						</td>
+	<!-- Table -->
+	<div class="row p-2">
+		<div class="col-lg-12">
+			<table id="center-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Evacuation Center</th>
+						<th>Barangay</th>
+						<th style="text-align: center;">Capacity</th>
+						<th style="text-align: center;">Status</th>
+						<th></th>
 					</tr>
-					counter++;
-				}
-			</tbody>
-		</table>
-	</div>
-</div>
-
-<!-- Modal: Confirm Delete -->
-<div class="modal" id="deleteConfirmationModal" tabindex="-1">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title">Confirm Delete</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<p>Are you sure you want to delete this disaster?</p>
-				<p><strong class="text-danger">This cannot be undone.</strong></p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-				<button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
-			</div>
+				</thead>
+				<tbody>
+					@{ var counter = 1; }
+					@foreach (var item in Model.listEvacuation)
+					{
+						<tr>
+							<td width="5%">@counter</td>
+							<td width="25%">@item.centerName</td>
+							<td width="20%">@item.barangayName</td>
+							<td width="15%" style="text-align: center;">@item.maxCapacity</td>
+							<td width="15%" style="text-align: center;">
+								@if (@item.status == "Active")
+								{
+									<span class="badge bg-success">@item.status</span>
+								}
+								else if (@item.status == "Inactive")
+								{
+									<span class="badge rounded-pill bg-light">@item.status</span>
+								}
+							</td>
+							<td width="10%">
+								<a class="btn btn-success edit-button" href="/evacuationcenter/profile/index?centerID=@item.centerID">
+									View
+								</a>
+							</td>
+						</tr>
+						counter++;
+					}
+				</tbody>
+			</table>
 		</div>
 	</div>
 </div>
 
-<!-- Sorting -->
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<!-- Making the table responsive -->
 <script>
-	// Sort by
-	let lastClickedHeader = null;
-
-	function toggleArrowIcons(header) {
-		// Get the arrow icons for all headers
-		const centerNameArrow = document.getElementById('centerNameArrow');
-		const maxCapacityArrow = document.getElementById('maxCapacityArrow');
-		const statusArrow = document.getElementById('statusArrow');
-
-		// Determine which header was clicked and toggle the arrow icons accordingly
-		if (header === 'centerName') {
-			centerNameArrow.style.display = centerNameArrow.style.display === 'none' ? 'block' : 'none';
-			maxCapacityArrow.style.display = 'none';
-			statusArrow.style.display = 'none';
-		} else if (header === 'maxCapacity') {
-			centerNameArrow.style.display = 'none';
-			maxCapacityArrow.style.display = maxCapacityArrow.style.display === 'none' ? 'block' : 'none';
-			statusArrow.style.display = 'none';
-		} else if (header === 'status') {
-			centerNameArrow.style.display = 'none';
-			maxCapacityArrow.style.display = 'none';
-			statusArrow.style.display = statusArrow.style.display === 'none' ? 'block' : 'none';
-		}
-
-		// Update the last clicked header
-		lastClickedHeader = header;
-	}
-</script>
-
-<!-- Search -->
-<script>
-	// Search function
-	document.addEventListener("DOMContentLoaded", function () {
-		document.getElementById("search-form").addEventListener("submit", function (e) {
-			e.preventDefault();
-			const query = document.getElementById("search-bar").value;
-			fetch(`/evacuationcenter?handler=Search&query=${query}`)
-				.then(response => response.json())
-				.then(data => {
-					const tableBody = document.querySelector("table tbody");
-					tableBody.innerHTML = "";
-					let counter = 1;
-					
-					data.forEach(result => {
-						const statusBadge = result.status === "Active" ?
-							`<span class="badge bg-success">Active</span>` :
-							`<span class="badge rounded-pill bg-light">Inactive</span>`;
-
-						const newRow = `<tr data-id="${result.centerID}" class="data-row clickable-row">
-											<td width="5%">${counter}</td>
-											<td width="25%">${result.centerName}</td>
-											<td width="20%">${result.barangayName}</td>
-											<td width="15%">${result.maxCapacity}</td>
-											<td width="15%">${statusBadge}</td>
-											<td width="20%">
-												<!-- Edit button -->
-												<a class="btn btn-success edit-button" href="/evacuationcenter/edit?centerID=${result.centerID}">
-													<i class="bi bi-pencil-fill"></i>
-												</a>
-
-												<!-- Delete button -->
-												<a href="#" class="btn btn-danger edit-button" onclick="prepareDelete('${result.centerID}')"
-													data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
-													<i class="bi bi-trash-fill"></i>
-												</a>
-											</td>
-										</tr>`;
-						tableBody.innerHTML += newRow;
-						counter++;
-					});
-
-					// Add click event listener to the new rows
-					addClickEventToRows();
-				})
-				.catch(error => {
-					console.error("Error:", error);
-				});
+	$(document).ready(function () {
+		$('#center-table').DataTable({
+			responsive: true,
+			columnDefs: [
+				{ "orderable": true, "targets": [0, 1, 2, 3, 4] }, // Sortable columns
+				{ "orderable": false, "targets": [5] } // Non-sortable columns
+			]
 		});
-	});
-</script>
-
-<!-- Clickable Row for Evacuation Center -->
-<script>
-	document.addEventListener("DOMContentLoaded", function () {
-		const table = document.getElementById('evacuation-table');
-
-		table.addEventListener('click', function (event) {
-			const clickedRow = event.target.closest('.data-row');
-
-			if (clickedRow) {
-				const centerId = clickedRow.getAttribute("data-id");
-				if (centerId) {
-					window.location.href = `/evacuationcenter/profile?centerID=${centerId}`;
-				}
-			}
-		});
-	});
-</script>
-
-<!-- Confirm Delete button in Modal -->
-<script>
-	const deleteButtons = document.querySelectorAll('.edit-button');
-	let centerIdToDelete = null;
-
-	deleteButtons.forEach(function (button) {
-		button.addEventListener('click', function () {
-			centerIdToDelete = this.getAttribute('data-deleteid');
-		});
-	});
-
-	// Function to prepare for delete action
-	function prepareDelete(centerID) {
-		if (centerID === null || centerID === undefined) {
-			// Retrieve centerID from the button's data-deleteid attribute
-			centerIdToDelete = event.currentTarget.getAttribute('data-deleteid');
-		} else {
-			centerIdToDelete = centerID;
-		}
-	}
-
-	const confirmDeleteButton = document.getElementById('confirmDeleteButton');
-
-	confirmDeleteButton.addEventListener('click', function () {
-		if (centerIdToDelete !== null) {
-			window.location.href = "/evacuationcenter/delete?centerID=" + centerIdToDelete;
-		}
 	});
 </script>
