--- a/Pages/disaster/profile/staffassignment/Index.cshtml
+++ b/Pages/disaster/profile/staffassignment/Index.cshtml
@@ -4,13 +4,6 @@
 	ViewData["Title"] = "Staff Assignment";
 }
 
-<head>
-	<!-- DataTables Select CSS -->
-	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.4/css/select.dataTables.min.css">
-	<!-- DataTables Select JavaScript -->
-	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/select/1.3.4/js/dataTables.select.min.js"></script>
-</head>
-
 <!-- Alert Banners -->
 @if (!string.IsNullOrEmpty(Request.Query["successMessage"]))
 {
@@ -133,7 +126,7 @@
 					<div class="col-lg-12">
 						<table id="assignment-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 							<thead>
-								<tr>
+								<tr style="vertical-align: top;">
 									<th>
 										<div class="form-check">
 											<input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
@@ -159,10 +152,10 @@
 												<label class="form-check-label"></label>
 											</div>
 										</td>
-										<td width="35%">@item.fullName</td>
+										<td width="30%">@item.fullName</td>
 										<td width="10%">@item.role</td>
-										<td width="25%">@item.assignmentDate</td>
-										<td width="23%">@item.completionDate</td>
+										<td width="27%">@item.assignmentDate</td>
+										<td width="26%">@item.completionDate</td>
 										<td width="5%">
 											@if (@item.status == "Assigned")
 											{
@@ -271,7 +264,7 @@
 	$(document).ready(function () {
 		var table = $('#assignment-table').DataTable({
 			responsive: true,
-			select: true, // Enable row selection
+			select: true, // select for checkbox
 			columnDefs: [
 				{ "orderable": true, "targets": [1, 3, 4, 5] }, // Sortable columns
 				{ "orderable": false, "targets": [0, 2, 6] } // Non-sortable columns
