--- a/Pages/evacuationcenter/Index.cshtml
+++ b/Pages/evacuationcenter/Index.cshtml
@@ -89,9 +89,10 @@
 		<div class="col-lg-12">
 			<table id="center-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 				<thead>
-					<tr>
+					<tr style="vertical-align: top;">
 						<th>#</th>
 						<th>Evacuation Center</th>
+						<th>Type</th>
 						<th>Barangay</th>
 						<th style="text-align: center;">Capacity</th>
 						<th style="text-align: center;">Status</th>
@@ -105,9 +106,10 @@
 						<tr>
 							<td width="5%">@counter</td>
 							<td width="25%">@item.centerName</td>
-							<td width="20%">@item.barangayName</td>
-							<td width="15%" style="text-align: center;">@item.maxCapacity</td>
-							<td width="15%" style="text-align: center;">
+							<td width="20%">@item.centerType</td>
+							<td width="25%">@item.barangayName</td>
+							<td width="10%" style="text-align: center;">@item.maxCapacity</td>
+							<td width="10%" style="text-align: center;">
 								@if (@item.status == "Active")
 								{
 									<span class="badge bg-success">@item.status</span>
@@ -117,7 +119,7 @@
 									<span class="badge rounded-pill bg-light">@item.status</span>
 								}
 							</td>
-							<td width="10%">
+							<td width="5%">
 								<a class="btn btn-success edit-button" href="/evacuationcenter/profile/index?centerID=@item.centerID">
 									View
 								</a>
@@ -134,12 +136,45 @@
 <!-- Making the table responsive -->
 <script>
 	$(document).ready(function () {
-		$('#center-table').DataTable({
+		var table = $('#center-table').DataTable({
 			responsive: true,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1, 2, 3, 4] }, // Sortable columns
-				{ "orderable": false, "targets": [5] } // Non-sortable columns
+				{ "orderable": true, "targets": [0, 1, 3, 4] }, // Sortable columns
+				{ "orderable": false, "targets": [2, 5, 6] } // Non-sortable columns
 			]
+		});
+
+		// Adding filters to specific columns
+		table.columns([2, 3, 5]).every(function () {
+			var column = this;
+			var select = $('<select><option value=""></option></select>')
+				.appendTo($(column.header()))
+				.on('change', function () {
+					var val = $.fn.dataTable.util.escapeRegex(
+						$(this).val()
+					);
+
+					column
+						.search(val ? '^' + val + '$' : '', true, false)
+						.draw();
+				});
+
+			column.data().unique().sort().each(function (d, j) {
+				// Only add the options "Active" and "Inactive" for the "Status" column
+				if (column.index() === 5) {
+					// Set specific filter options only if they haven't been added
+					if (select.find("option[value='Active']").length == 0) {
+						select.append('<option value="Active">Active</option>');
+					}
+					if (select.find("option[value='Inactive']").length == 0) {
+						select.append('<option value="Inactive">Inactive</option>');
+					}
+				}
+				// For other columns, show all unique values as filter options
+				else {
+					select.append('<option value="' + d + '">' + d + '</option>');
+				}
+			});
 		});
 	});
 </script>
