--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -58,20 +58,36 @@ body {
     margin: 20px 10px; /* Add margin to create spacing between buttons */
 }
 
+.breadcrumb-container {
+    border: 1px solid #E9ECEF;
+    border-radius: 10px;
+    padding: 15px 10px 0 10px;
+    margin: 0 0 10px 0;
+    display: inline-flex;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+}
+
 .breadcrumbs {
     display: flex;
     grid-gap: 6px;
+    padding: 0 0 0 0;
 }
 
-    .breadcrumbs li a {
-        color: var(--bs-primary-color);
-        text-decoration: none;
-    }
+.breadcrumbs li a {
+    color: #6c757d;
+    text-decoration: none;
+}
 
-        .breadcrumbs li a.active, .breadcrumbs li.divider {
-            color: grey;
-            pointer-events: none;
-        }
+.breadcrumbs li.divider {
+    color: #6c757d;
+    pointer-events: none;
+}
+
+.breadcrumbs li a.active {
+    color: #3F8F8B;
+    font-weight: bold;
+    pointer-events: none;
+}
 
 /*SIDEBAR*/
 #sidebar {
@@ -148,7 +164,7 @@ body {
 .content {
     position: relative;
     width: 100%;
-    padding: 36px 24px;
+    padding: 5px 20px 25px 20px;
     max-height: calc(100vh -56px);
     overflow-y: auto;
     background: #fff;
@@ -192,7 +208,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 10px;
-    margin-top: 36px;
+    margin-top: 5px;
 }
 
     .content .box-info .info-item {
