--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -106,7 +106,7 @@
 		<div class="col-auto d-flex justify-content-between align-items-center">
 			<div class="d-flex justify-content-end align-items-center">
 				<a class="btn btn-primary mb-2 button-spacing" href="/family"><ion-icon name="download-outline"></ion-icon> Import .CSV File</a>
-				<a class="btn btn-primary mb-2" href="/family/add/index">
+				<a class="btn btn-primary mb-2" href="/family/profile/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
 				</a>
 			</div>
