--- a/Pages/Family/Profile/Add/Index.cshtml
+++ b/Pages/Family/Profile/Add/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Family.Add.IndexModel
+@model AgapayAidSystem.Pages.Family.Profile.Add.IndexModel
 @{
 	ViewData["Title"] = "Add Family";
 }
