--- a/Pages/disaster/profile/informationboard/Index.cshtml
+++ b/Pages/disaster/profile/informationboard/Index.cshtml
@@ -78,6 +78,7 @@
 	</div>
 </div>
 
+<!-- Sidebar (Mobile) -->
 <script>
 	// Get the current page URL
 	var currentPage = window.location.pathname.toLowerCase();
